chore: cleaning up comments

--- a/public/pages/projectdetails.html
+++ b/public/pages/projectdetails.html
@@ -22346,13 +22346,7 @@
           const price = priceInput.value;
           const total = totalInput.value;
 
-          // Add item to the list
-          // will append the values in the table later
-          // const item = document.createElement("li");
-          // item.textContent = `${itemName} (${itemNumber}) - ${quantity} x ${price} = ${total}`;
-          // itemList.appendChild(item);
-
-          // Reset form fields
+          // Reset form fields example:
           // itemNameSelect.value = "";
           // quantityInput.value = "";
           // priceInput.value = "";
@@ -22445,12 +22439,6 @@
           // add delay before proceeding to simulate network request using promise
           await delay(2000);
 
-          // Add item to the list
-          // will append the values in the table later
-          // const item = document.createElement("li");
-          // item.textContent = `${itemName} (${itemNumber}) - ${quantity} x ${price} = ${total}`;
-          // itemList.appendChild(item);
-
           // Reset form fields here of the inputs
 
           // after processing the form remove the is-submitting class
@@ -22509,12 +22497,6 @@
 
           // add delay before proceeding to simulate network request using promise
           await delay(2000);
-
-          // Add item to the list
-          // will append the values in the table later
-          // const item = document.createElement("li");
-          // item.textContent = `${itemName} (${itemNumber}) - ${quantity} x ${price} = ${total}`;
-          // itemList.appendChild(item);
 
           // Reset form fields here of the inputs
 
@@ -22614,12 +22596,6 @@
           // add delay before proceeding to simulate network request using promise
           await delay(1000);
 
-          // Add item to the list
-          // will append the values in the table later
-          // const item = document.createElement("li");
-          // item.textContent = `${itemName} (${itemNumber}) - ${quantity} x ${price} = ${total}`;
-          // itemList.appendChild(item);
-
           // Reset form fields here of the inputs
 
           // after processing the form remove the is-submitting class
@@ -22660,12 +22636,6 @@
 
           // add delay before proceeding to simulate network request using promise
           await delay(1000);
-
-          // Add item to the list
-          // will append the values in the table later
-          // const item = document.createElement("li");
-          // item.textContent = `${itemName} (${itemNumber}) - ${quantity} x ${price} = ${total}`;
-          // itemList.appendChild(item);
 
           // Reset form fields here of the inputs
 
@@ -22714,19 +22684,11 @@
           // add delay before proceeding to simulate network request using promise
           await delay(1000);
 
-          // Add item to the list
-          // will append the values in the table later
-          // const item = document.createElement("li");
-          // item.textContent = `${itemName} (${itemNumber}) - ${quantity} x ${price} = ${total}`;
-          // itemList.appendChild(item);
-
-          // Reset form fields here of the inputs
+          // Reset form fields here of the inputs if needed
 
           // after processing the form remove the is-submitting class
           newItemForm6.classList.remove("is-submitting");
           submitBtn.removeAttribute("disabled");
-          // fourthForm.classList.remove("active-form");
-          // fourthForm.setAttribute("inert", "true");
 
           //close the modal
           itemModal
