--- a/public/pages/projectlist.html
+++ b/public/pages/projectlist.html
@@ -1336,7 +1336,7 @@
                 <span class="fas fa-filter" data-fa-transform="shrink-3"></span>
               </button>
               <div
-                class="modal fade"
+                class="modal fade d-lg-none"
                 id="filter-modal"
                 tabindex="-1"
                 role="dialog"
@@ -1350,7 +1350,7 @@
                   <div class="modal-content position-relative">
                     <div class="position-absolute top-0 end-0 mt-2 me-2 z-1">
                       <button
-                        class="btn-close btn btn-sm btn-circle d-flex flex-center transition-base"
+                        class="modal-close-btn btn-close btn btn-sm btn-circle d-flex flex-center transition-base"
                         data-bs-dismiss="modal"
                         aria-label="Close"
                       ></button>
@@ -2719,6 +2719,27 @@
     <!-- ===============================================-->
     <!--    JavaScripts-->
     <!-- ===============================================-->
+
+    <script>
+      /** closes the modal
+       * @param {HTMLElement} modalEl - the modal element to close
+       */
+      function closeModal(modalEl) {
+        const modalCloseBtn = modalEl.querySelector(".modal-close-btn");
+        modalCloseBtn.click();
+      }
+
+      document.addEventListener("DOMContentLoaded", function () {
+        const mobileMediaQuery = window.matchMedia("(max-width: 769px)");
+        const modalEl = document.getElementById("filter-modal");
+
+        mobileMediaQuery.addEventListener("change", (e) => {
+          console.log("mobileMediaQuery changed", e.matches);
+          !e.matches && closeModal(modalEl);
+        });
+      });
+    </script>
+
     <script src="../vendors/popper/popper.min.js"></script>
     <script src="../vendors/bootstrap/bootstrap.min.js"></script>
     <script src="../vendors/anchorjs/anchor.min.js"></script>
